# espnff

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  index.html  setup.cfg  setup.py
data/: Position: QB , Acquired by: Draft.html  Position: RB , Acquired by: Draft.html  Position: TE , Acquired by: Draft.html  Position: WR , Acquired by: Draft.html  team_abbrev_conversion.csv
data/Fantasy_Football_2020/: .FF_2020_season_summary.ipynb.icloud  2020_FF_Draft_Agg_FPTS_vs_dollars.xlsx  2020_FF_Draft_Value_plot.html  Draft_Agg_FPTS_vs_dollars.csv  FF_2020_indepth.ipynb  FF_2021_Free_agent_acquisition_values-edited2.ipynb  FF_2021_Free_agent_acquisition_values-edited3-for_pub.ipynb  FF_2021_Free_agent_acquisition_values-edited4-for_pub.ipynb  FF_2021_Free_agent_acquisition_values-edited5.ipynb  FF_2021_Free_agent_acquisition_values-edited5_forpub.ipynb  FF_2021_Free_agent_acquisition_values.ipynb  FF_2021_bidding_wars.ipynb  FantasyPros_Fantasy_Football_Statistics_DST.csv  FantasyPros_Fantasy_Football_Statistics_K.csv  FantasyPros_Fantasy_Football_Statistics_QB.csv  FantasyPros_Fantasy_Football_Statistics_RB.csv  FantasyPros_Fantasy_Football_Statistics_TE.csv  FantasyPros_Fantasy_Football_Statistics_WR.csv  League_Draft_Results.xlsx  League_Draft_Results1.xlsx  (+8 more)
espnff.egg-info/: PKG-INFO  SOURCES.txt
notebooks/: 2023-02-28_FF_nb.ipynb  2023-03-09_FF_nb.ipynb  2023-03-14_main.ipynb  2023-03-19_main.ipynb  2023-03-25_main.ipynb  FF_2021_nb.ipynb  generate_synthetic_data.ipynb  streamlit.ipynb
src/: MANIFEST.in  ff_league_data.py  nfl_schedule.py  plotting.py  setup.cfg  toy.py
src/espnff_analysis/: __main__.py  calc_best_waiver.py  ff_league_data.py  nfl_schedule.py  pipeline.py  plotting.py  streamlit_app.py  toy.py
src/espnff_analysis.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/espnff_analysis/data/: team_abbrev_conversion.csv
(+9 files in other folders)
