[metadata]
name = espn_ff
version = attr:espn_ff.__version__
author = Jonathan Cheng
author_email = jonchengw@gmail.com
description = ESPN fantasy analysis
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:

python_requires = >=3.9

# [options.entry_points]
# console_scripts =
#     tcra = tcr_assay.__main__:main