[metadata]
name = espnff_analysis
version = attr:espnff_analysis.__version__
author = Jonathan Cheng
author_email = jonchengw@gmail.com
description = espn fantasy football analysis
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
install_requires =
    pandas>=1.1.3
    seaborn>=0.11.0
    plotly>=5.4.0
    plotly-express>=0.4.0
    numpy>=1.22.4
    matplotlib>=3.3.2

packages = find:

python_requires = >=3.8

[options.entry_points]
console_scripts =
    tcra = tcr_assay.__main__:main

